--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.0",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "@types/react-google-recaptcha": "^2.1.9"
   },
   "devDependencies": {
     "typescript": "^5",
